# sctenifold

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
docs/source/: 1_data.ipynb  2_build_network.ipynb  3_knock_out.ipynb  4_visualization.ipynb  conf.py
scTenifold/: __init__.py  __main__.py
scTenifold/cell_cycle/: UCell.py  scoring.py
scTenifold/core/: _QC.py  __init__.py  _base.py  _decomposition.py  _ko.py  _networks.py  _norm.py  _utils.py
scTenifold/data/: __init__.py  _get.py  _io.py  _sim.py
scTenifold/plotting/: __init__.py  _dim_reduction.py  _plotting.py
tests/: conftest.py  test_base.py  test_data.py  test_main.py  test_networks.py
